api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2022-06-08T10:29:10Z"
  generation: 2
  labels:
    app: api
  name: api
  namespace: ingress-demo
  resourceVersion: "14564"
  uid: 4d93f280-f028-42fc-a852-0ea8ffe4d207
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
      name: api
    spec:
      containers:
      - env:
        - name: MONGODB_CONNECTION
          valueFrom:
            secretKeyRef:
              key: db
              name: cosmosdb
        image: fabmedicaleaq.azurecr.io/content-api
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 10
        name: api
        ports:
        - containerPort: 3001
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2022-06-08T10:29:10Z"
    lastUpdateTime: "2022-06-08T10:29:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-06-08T10:29:10Z"
    lastUpdateTime: "2022-06-08T10:30:52Z"
    message: ReplicaSet "api-55bcd8949d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
