content.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: content-ingress
  namespace: ingress-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - fabmedical-eaq-ingress.northeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: fabmedical-eaq-ingress.northeurope.cloudapp.azure.com
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: web
          servicePort: 80
      - path: /content-api/(.*)
        backend:
          serviceName: api
          servicePort: 3001
